[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Spaceship02.png" type="Texture" id=1]
[ext_resource path="res://Sprites/SpaceshipFlames.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Fonts/dogicapixelbold.ttf" type="DynamicFontData" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.625
height = 8.0

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[node name="Player" type="Area2D"]
position = Vector2( 0, 494 )
scale = Vector2( 8, 8 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
ShipColor = Color( 0, 0.537255, 0, 1 )

[node name="SpaceshipSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ThrustAnimation" type="AnimatedSprite" parent="."]
position = Vector2( 0, 14 )
z_index = 1
frames = SubResource( 4 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.882999 )
shape = SubResource( 5 )

[node name="Bottom" type="Node2D" parent="."]
position = Vector2( 0, 9.935 )

[node name="Camera" type="Camera2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -53.777 )
current = true

[node name="Labels" type="Node2D" parent="."]
position = Vector2( 0, -50.375 )

[node name="DistanceLabel" type="Label" parent="Labels"]
margin_left = -26.0
margin_top = -61.625
margin_right = 308.0
margin_bottom = -47.625
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = SubResource( 6 )
text = "Distance:
----------
0Km"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLabel" type="Label" parent="Labels"]
margin_left = -26.0
margin_top = -55.75
margin_right = 308.0
margin_bottom = 1.25
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = SubResource( 6 )
text = "----------
Speed:
----------
0Km"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Temp" type="Label" parent="Labels"]
margin_left = -26.0
margin_top = -46.426
margin_right = 308.0
margin_bottom = 10.574
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = SubResource( 6 )
text = "(0.0)"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="." to="." method="_on_Hitbox_entered"]
